@@ -1,14 +1,15 @@
-# $NetBSD: Makefile,v 1.17 2004/05/13 02:07:47 cjs Exp $
+# $NetBSD: Makefile,v 1.18 2004/09/24 19:25:38 abs Exp $
 #
 
-DISTNAME=	global-4.7
+DISTNAME=	global-4.8
 CATEGORIES=	devel
 MASTER_SITES=   http://www.tamacom.com/global/
 
-MAINTAINER=	abs@NetBSD.org
+MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.tamacom.com/global/
 COMMENT=	Source code tag system including web browser output
 
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
 USE_BUILDLINK3=		YES
 GNU_CONFIGURE=		YES
 INFO_FILES=		global.info
